--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ paper/biPartiteWikipedia.pdf
 paper/biPartiteWikipedia.synctex.gz
 paper/biPartiteWikipedia.dvi
 paper/biPartiteWikipedia.log
+paper/biPartiteWikipedia.aux
 
 #save
 savedata
