expanded discussion with more storying and two new figures (the figure are rough and need work

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,125 @@
+/#MORbody.html#
+/.ipynb_checkpoints/Method of Reflections Explained and Exampled-checkpoint.ipynb
+/.ipynb_checkpoints/Untitled0-checkpoint.ipynb
+/.ipynb_checkpoints/country_products-checkpoint.ipynb
+/.ipynb_checkpoints/countrysave-checkpoint.ipynb
+/.ipynb_checkpoints/rho_snapshot_investigation-checkpoint.ipynb
+/.project
+/.pydevproject
+/Grid Search for User of Feminist Writers_landscape.eps
+/Grid Search for User of Feminist Writers_landscape.npy
+/Grid Search for Usersr of Feminist Writers_landscape.eps
+/Grid Search for Usersr of Feminist Writers_landscape.npy
+/MORbody.html
+/Method of Reflections Explained and Exampled.html
+/Untitled0.ipynb
+/alpha_beta_evolution.py
+/etagere
+/misc/Category:Bicycle_parts Articles_landscape.eps
+/misc/Category:Bicycle_parts Articles_landscape.npy
+/misc/Category:Bicycle_parts Editors_landscape.eps
+/misc/Category:Bicycle_parts Editors_landscape.npy
+/misc/Category:Computability_theory Articles_landscape.eps
+/misc/Category:Computability_theory Articles_landscape.npy
+/misc/Category:Counterculture_festivals Articles_landscape.eps
+/misc/Category:Counterculture_festivals Articles_landscape.npy
+/misc/Category:Economic_theories Articles_landscape.eps
+/misc/Category:Economic_theories Articles_landscape.npy
+/misc/Category:Feminist_writers Articles_landscape.eps
+/misc/Category:Feminist_writers Articles_landscape.npy
+/misc/Category:Feminist_writers Editors_landscape.eps
+/misc/Category:Feminist_writers Editors_landscape.npy
+/misc/Category:Feminist_writerstriangle_matrix.eps
+/misc/Category:Feminist_writerstriangle_matrix.png
+/misc/Category:Feminist_writerstriangle_matrix_corrected.png
+/misc/Category:Military_history_of_the_United_States Articles_landscape.eps
+/misc/Category:Military_history_of_the_United_States Articles_landscape.npy
+/misc/Category:Military_history_of_the_United_States Editors_landscape.eps
+/misc/Category:Military_history_of_the_United_States Editors_landscape.npy
+/misc/Category:Nobel_Peace_Prize_laureates Articles_landscape.eps
+/misc/Category:Nobel_Peace_Prize_laureates Articles_landscape.npy
+/misc/Category:Sexual_acts Articles_landscape.eps
+/misc/Category:Sexual_acts Articles_landscape.npy
+/misc/Category:Yoga Articles_landscape.eps
+/misc/Category:Yoga Articles_landscape.npy
+/misc/bipartite_competitor.pdf
+/misc/crap.png
+/misc/early snapshots.png
+/misc/early snapshots2.png
+/misc/figure_1.png
+/misc/history_ranking Category:American_women_novelists-Exgoneous Article rank.png
+/misc/history_ranking Category:American_women_novelists-Exogenous Editor ranking.png
+/misc/make_category_data.py
+/misc/may_20_notes.txt
+/misc/opti_combined.pickle
+/misc/opti_df.pickle
+/misc/opti_df_corrected.pickle
+/misc/opti_df_l_corrected.pickle
+/misc/rho_articles.png
+/misc/rho_users.png
+/paper/Figures/contour_fem_arts.png
+/paper/Figures/contour_fem_eds.png
+/paper/Figures/cumulative_snapshots_Feminist_Writers.xcf
+/paper/Figures/cumulative_snapshots_Feminist_Writers_thirteen.png.bak
+/paper/Figures/example_evolution.png
+/paper/Figures/example_landscape.png
+/paper/Figures/fem_editors_iter_converge.xcf
+/paper/Figures/landscape_bicycle_upper.png
+/paper/Figures/landscape_military_upper.png
+/paper/Figures/rho_combined.xcf
+/paper/biPartiteWikipedia.tex.orig
+/paper/cscw/#revision_talk_notes.md#
+/paper/cscw/actionPlanReviewsCSCW.txt
+/paper/cscw/cscw2015.dvi
+/paper/cscw/cscw2015.pdf
+/paper/cscw/cscw2015_refs.zip
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._98-08-077.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._A Framework for Analyzing the Knowledge Commons _ a chapter from.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._PNAS-2004-Hong-16385-9.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._Science-2006-Salganik-854-6.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._a4-kane.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._isre%2E1070%2E0158.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._kane_2009_ocisa.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._mnsc%2E1110%2E1441.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._p157-wilkinson.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._p427-keegan.pdf
+/paper/cscw/cscw2015_refs/__MACOSX/cscw2015_refs/._p731-brandes.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/98-08-077.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/A Framework for Analyzing the Knowledge Commons _ a chapter from.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/PNAS-2004-Hong-16385-9.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/Science-2006-Salganik-854-6.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/a4-kane.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/isre%2E1070%2E0158.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/kane_2009_ocisa.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/mnsc%2E1110%2E1441.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/p157-wilkinson.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/p427-keegan.pdf
+/paper/cscw/cscw2015_refs/cscw2015_refs/p731-brandes.pdf
+/paper/cscw/paper-comments.txt
+/paper/cscw/paper672.pdf
+/paper/cscw/revision_talk_notes.md
+/paper/cscw/revision_talk_notes.txt
+/paper/sections/abstract.tex.orig
+/paper/sections/argmintest.dvi
+/paper/sections/argmintest.pdf
+/paper/sections/argmintest.synctex.gz
+/paper/sections/argmintest.tex
+/paper/sections/method.tex.orig
+/poster/Wikipedia-logo-v2-en.svg
+/poster/cateory_matrix.png
+/poster/cateory_matrix.svg
+/poster/contour_fem_combined_horiz.png
+/poster/examples/ProductiveBurstsIPAM copy.pdf
+/poster/examples/poster_nuclear copy.pdf
+/poster/examples/poster_prop_growth copy.pdf
+/poster/netsci_poster.eps
+/poster/netsci_poster.pdf
+/poster/netsci_poster.ps
+/poster/netsci_poster.tiff
+/poster/netsci_poster.xcf
+/poster/netsci_poster_sm.png
+/rho_snapshot_investigation.ipynb
+/singularity.png
 
 ## temp files
 .DS_Store
