updating the git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,9 @@
 /paper/cscw/cscw2015_refs/cscw2015_refs/p157-wilkinson.pdf
 /paper/cscw/cscw2015_refs/cscw2015_refs/p427-keegan.pdf
 /paper/cscw/cscw2015_refs/cscw2015_refs/p731-brandes.pdf
+/paper/cscw/cscw2015.pdf
+/paper/cscw/cscw2015.out
+/paper/cscw/cscw2015.synctex.gz
 /paper/cscw/paper-comments.txt
 /paper/cscw/paper672.pdf
 /paper/cscw/revision_talk_notes.md
