--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@
 /paper/cscw/cscw2015.synctex.gz
 /paper/cscw/paper-comments.txt
 /paper/cscw/paper672.pdf
+/paper/cscw/cscw2015.pdf
 /paper/cscw/revision_talk_notes.md
 /paper/cscw/revision_talk_notes.txt
 /paper/sections/abstract.tex.orig
