final camera ready version with copyright notice and DOI

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,9 @@ savedata/*
 ./*.eps
 ./*.pickle
 
+
+paper/cscw/cscw2015.pdf
+
+paper/cameraReadySubmission/cscw/cscw2015.pdf
+
+paper/cameraReadySubmission.zip
